# website

./: .eleventy.js  .eslintrc.js  .gitignore  .prettierrc  CLAUDE.md  CNAME  DEPLOYMENT.md  README-ANALYSIS.md  README.md  analyze-website.sh  build-css.sh  build-info.json  build-syntax-highlighter.sh  deploy.sh  download.html  index.html  manifest.json  package-lock.json  package.json  robots.txt  rollup.config.js  sw.js  vercel.json
.github/ISSUE_TEMPLATE/: deployment-issue.md
.github/workflows/: dependency-updates.yml  deploy.yml  vercel-build.yml
about/: index.html
books/: index.html
contact/: index.html
content/: about.md  books.md  contact.md  index.md  projects.md  quotes.md  resume.md  tutorials.md
content/tutorials/: 01-introduction-to-linux-kernel-modules.md  02-character-device-drivers-fundamentals.md
css/: accordion_dark.css  dark.css  light.css  main.css
data/: bitsfrombooks.md  intro.md  profile.md  projects.md  quotes.md  resume.md  tutorial-01-introduction-to-linux-kernel-modules.md  tutorial-02-character-device-drivers-fundamentals.md  tutorial-03-kernel-memory-management-for-drivers.md  tutorial-04-synchronization-primitives.md  tutorial-05-interrupt-handling-and-workqueues.md
js/: bundle.js  syntax_highlighter.js  syntax_highlighter_bg.wasm
projects/: index.html
quotes/: index.html
resume/: index.html
src/_includes/: ascii-header.njk  (+3 more)
syntax-highlighter/: Cargo.toml  build.sh
syntax-highlighter/src/: lib.rs  tokenizer.rs
syntax-highlighter/src/languages/: bash.rs  c.rs  makefile.rs  mod.rs  yaml.rs
tutorials/: index.html
(+9 files in other folders)
